--- a/css/header.css
+++ b/css/header.css
@@ -5,10 +5,10 @@
     top: 0;
     padding: 5px;
     margin: 0;
+    display: flex;
 }
 
 .site-header h1 {
     font-size: 2em;
-    font-weight: bold;
 }
 
