--- a/css/header.css
+++ b/css/header.css
@@ -6,13 +6,10 @@
     padding: 5px;
     margin: 0;
     display: flex;
+    justify-items: flex-end;
 }
 
 .site-header h1 {
     font-size: 2em;
 }
 
-.header-nav {
-    align-items: end;
-    justify-content: space-between;
-}
