--- a/css/header.css
+++ b/css/header.css
@@ -6,10 +6,12 @@
     padding: 5px;
     margin: 0;
     display: flex;
-    align-items: end;
 }
 
 .site-header h1 {
     font-size: 2em;
 }
 
+.push {
+    margin-left: auto;
+}
