--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
     padding: 0.5rem 1rem;
-    background: black;
+    background: rgb(136, 52, 52);
     color: white;
     position: sticky;
     top: 0;
@@ -16,8 +16,54 @@
   .hero-logo {
     justify-self: center;
   }
-  .header-nav {
+
+/* Default: hidden nav for mobile */
+.topnav #header-nav {
+  display: none;
+  flex-direction: column;
+  background-color: #333;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 100%;
+}
+
+.topnav.show #header-nav {
+  display: flex;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  display: block;
+  position: absolute;
+  align-items: center;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+  #header-nav {
     justify-self: end;
+    padding: 10px;
   }
 
 .site-header h1 {
@@ -25,17 +71,12 @@
     display: none;
 }
 
-.header-nav {
-    margin-left: auto;
-    padding: 10px;
-}
-
-.header-nav a {
+#header-nav a {
     color: white;
     text-decoration: none;
     margin-left: 1rem;
   }
-  .header-nav a:hover {
+  #header-nav a:hover {
     text-decoration: underline;
   }
 
