--- a/css/header.css
+++ b/css/header.css
@@ -36,7 +36,7 @@
 }
 
 .hero-logo:hover {
-  color: rgb(50, 78, 178);
+  color: #ffd000;
 }
 
 /* ===== Top Navigation ===== */
@@ -59,7 +59,7 @@
 }
 
 .topnav a:hover {
-  color: rgb(50, 78, 178);
+  color: #ffd000;
 }
 
 .topnav a.icon {
