--- a/css/content.css
+++ b/css/content.css
@@ -11,13 +11,23 @@
  }
  
  
- .content {
+.content {
     position: block;
-    max-width: 50vh;
+    max-width: 75vh;
     margin-left: auto;
     margin-right: auto;
-    
+    padding-top: 40px;
+    padding-bottom: 40px;
  }
+
+/* CHOOSE EXPLORATION */
+
+#exploration {
+   margin-top: 20px;
+   margin-bottom: 20px;
+   text-align: center;
+}
+
 
 
 
