--- a/css/cards.css
+++ b/css/cards.css
@@ -22,3 +22,10 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   }
   
+
+/*
+.process-card:hover {
+  transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+*/
