--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -1,14 +1,22 @@
 /* ===== Reusable Button Style ===== */
 
 .hero-button {
-  display: inline-block;
+  display: flex;
+  width: 200px;
+  height: 40px;
   margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0.75rem 1.5rem;
-  background-color: #36719f;
-  color: white;
+  background-color: #ffd000;
+  color: black;
   text-decoration: none;
-  font-size: 1rem;
-  border-radius: 6px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 50px;
+  justify-content: center;
+  align-items: center;
   transition: background-color 0.3s ease, transform 0.2s ease;
   cursor: pointer;
   z-index: 2;
