--- a/css/components/icons.css
+++ b/css/components/icons.css
@@ -48,3 +48,16 @@
     margin-top: 2em;
   }
   
+  #puzzle {
+    width: 100px;
+    height:auto;
+    margin: 4em;
+    fill: white;
+    rotate: 0deg;
+    transition: all 0.5s ease-in-out;
+  }
+
+  #puzzle:hover {
+    rotate: -45deg;
+    fill: #ffd000;
+  }
