--- a/css/sections/approach.css
+++ b/css/sections/approach.css
@@ -30,12 +30,12 @@
   }
 
   #exploration p {
-    font-size: 1.5em;
+    font-size: 1.6em;
     margin-left:auto;
     margin-right: auto;
     line-height: 2em;
-    padding-left: 30%;
-    padding-right: 30%;
+    padding-left: 20%;
+    padding-right: 20%;
     padding-top: 2em;
     padding-bottom: 2em;
   }
@@ -50,9 +50,8 @@
   /* Process Container */
 
   #my-process {
-    display:block;
-    float: inherit;
-    justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     margin-top: 4rem;
     margin-bottom: 4rem;
     margin-right: 20%;
@@ -99,10 +98,19 @@
     color: #ffd000;
   }
 
- /* On screens that are 600px or less, set the background color to olive */
-@media screen and (min-width: 900px) {
+@media (max-width: 500px) {
    #my-process {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: block;
    } 
+
+   #exploration h2 {
+    font-size: 1.5em;
+   }
+
+   #exploration p {
+    font-size: 1em;
+    padding-left: 50px;
+    padding-right: 50px;
+   }
+
 }
