--- a/css/sections/services.css
+++ b/css/sections/services.css
@@ -2,10 +2,16 @@
 
 #services.section {
     background-color: #f8f8f8;
-    color: #111;
+    color: #000000;
     text-align: center;
   }
+
+  #services h2 {
+    font-size: 4em;
+  }
   
+
+
   /* Service Grid */
   .service-grid {
     display: grid;
@@ -29,5 +35,11 @@
   .service-card:hover {
     transform: translateY(-6px);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+  }
+
+  @media (max-width: 500px) {
+    #services h2{
+      font-size: 1.5em;
+    }
   }
   
