--- a/css/sections/collab.css
+++ b/css/sections/collab.css
@@ -3,15 +3,21 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url("/assets/images/star_background.png");
+  
+    background-image: 
+      url("/assets/images/star_background.png"),
+      linear-gradient(0deg, #0c2437, #060e27, #1c5e76, #2fd2ac);
+  
     background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-    background-color: black;
+    background-repeat: repeat;
+    background-size: cover, 500% 100%; /* wider gradient for scrolling */
+    background-position: center, 0% 0%;
+  
+    animation: gradient 30s linear infinite;
+  
     z-index: -100;
     color: white;
-}
+  }
 
 #collab h2 {
     font-size: 4em;
