--- a/css/main.css
+++ b/css/main.css
@@ -16,14 +16,20 @@ html, body {
   }
   
   /* Typography */
+  h1 {
+    font-size: 4em;
+    font-weight: bold;
+  }
+
   h2 {
-    font-size: 2em;
+    font-size: 4em;
     font-weight: bold;
     padding: 1rem 0;
     text-transform: uppercase;
   }
   
   p {
+    font-size: 1.5em;
     padding: 0.5rem 0;
     line-height: 1.6;
   }
@@ -33,5 +39,27 @@ html, body {
   .section .content {
     max-width: 960px;
     margin: 0 auto;
+    align-items: center;
+    text-align: center;
+  }
+
+  @media (max-width: 500px) {
+    h1 {
+      font-size: 1.5em;
+    }
+
+    h2 {
+      font-size: 1.2em;
+    }
+
+    h3 {
+      font-size: 1.1em;
+    }
+
+    p {
+      font-size: 1em;
+      
+    }
+
   }
   
