--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,13 @@ html, body {
     min-height: 100vh;
     background-color: white;
     overflow-x: hidden;
+    overflow-y: visible;
+    background:
+    linear-gradient(124deg,rgba(19, 46, 84, 1) 0%, rgba(55, 44, 87, 1) 50%, rgba(97, 32, 32, 1) 100%);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover, 100% 100%; /* Image: cover | Gradient: wide horizontal scroll */
+    background-position: center, 0% 0%;
   }
   
   .page-wrapper {
@@ -62,5 +69,8 @@ html, body {
       
     }
 
+    .section {
+      padding: 20px;
   }
-  
+
+  }
