--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -23,3 +23,20 @@
   transform: translateY(-6px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 }
+
+
+
+.project-card {
+  background: white;
+  margin: 4em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 200px;
+  justify-content: center;
+
+}
+
+.card-title h2{
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
